[gd_scene load_steps=2 format=3 uid="uid://bguy1xeee8eyc"]

[ext_resource type="Script" path="res://Category.gd" id="1_to4yr"]

[node name="Category" type="Control"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 3
anchors_preset = 0
offset_left = 3.0
offset_right = 363.0
script = ExtResource("1_to4yr")
label_name = "default"

[node name="AddTeam" type="Button" parent="."]
layout_mode = 0
offset_left = 277.0
offset_right = 309.0
offset_bottom = 32.0
text = "+"

[node name="CategoryName" type="Label" parent="."]
layout_mode = 0
offset_right = 277.0
offset_bottom = 32.0

[node name="ScrollContainer" type="ScrollContainer" parent="."]
layout_mode = 0
offset_top = 32.0
offset_right = 312.0
offset_bottom = 32.0

[node name="CategoryContainer" type="VBoxContainer" parent="ScrollContainer"]
layout_mode = 2

[node name="RemoveCategory" type="Button" parent="."]
layout_mode = 0
offset_left = 309.0
offset_right = 341.0
offset_bottom = 32.0
text = "x"

[connection signal="pressed" from="AddTeam" to="." method="_on_add_team_pressed"]
[connection signal="pressed" from="RemoveCategory" to="." method="_on_remove_category_pressed"]
